--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 	<link href="css/styles.css" rel="stylesheet" type="text/css">
 	
 	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<script src="https://kit.fontawesome.com/61cb53b069.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
@@ -22,14 +23,43 @@
 		<div class="row p-0 m-0">
 
 
+			<nav class="navbar navbar-expand-lg navbar-light overflow-hidden">
+				<div class="container-fluid">
+					<a class="navbar-brand text-white extra" href="#">AWorkingMind</a>
+					<button class="navbar-toggler navbar-b" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+						<i class="fa-solid fa-bars text-white"></i>
+					</button>
+					<div class="collapse navbar-collapse justify-content-md-end" id="navbarNav">
+						<ul class="navbar-nav text-center ">
 
-			<div class="navbar d-flex justify-content-end">
+							<li class="nav-item ">
+								<a class="nav-link active word extra" aria-current="page" href="#">Home</a>
+							</li>
+							<li class="nav-item">
+								<a class="nav-link word" href="#">Kontakt</a>
+							</li>
+							<li class="nav-item">
+								<a class="nav-link word" href="#">Designs</a>
+							</li>
+
+							<li class="nav-item pt-1 d-none d-lg-block">
+								<label class="col switch ">
+									<input id="darkModeToggle" type="checkbox">
+									<span class="slider mt-1 "></span>
+								</label>
+							</li>
+						</ul>
+					</div>
+				</div>
+			</nav>
+
+
+
+
+
+			<div class="navbar d-flex justify-content-end d-none">
 				<div class="row p-0 m-0 ">
 
-					<label class="col switch ">
-						<input id="darkModeToggle" type="checkbox">
-						<span class="slider mt-1 "></span>
-					</label>
 
 						<a class="col text-decoration-none pe-3 open" href="#"><h6 class="p-0 word"><span class="extra">Home</span></h6></a>
 
@@ -47,7 +77,7 @@
 
 				<h1 class="col-12 text-white header-text p-0 m-0 display-6"> <span class="credit"> <div class="spinner-grow spinner-grow-sm" role="status">
 					<span class="visually-hidden">Loading...</span> </div> I'm Christian T. Rasmussen</span> <br> UX/UI <span class="extra">Designer</span>,
-				<br> Front-end Developer, <br> Multimediedesigner<br> And creative soul </h1>
+				<br> Front-end Developer, <br> Multimediedesigner<br> And Photopragher </h1>
 				</div>
 			</div>
 
